<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/Nearfocal"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/near_focal_distance"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Farfocal"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/far_focal_distance"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nearfocal" />

    <TextView
        android:id="@+id/Depth"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/depth_of_field"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Farfocal" />

    <TextView
        android:id="@+id/Hyperfocal"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/hyperfocal_distance"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Depth" />

    <TextView
        android:id="@+id/ansNearfocal"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/Nearfocal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ansFarfocal"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/Farfocal"
        app:layout_constraintTop_toBottomOf="@+id/ansNearfocal" />

    <TextView
        android:id="@+id/ansDepth"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/Depth"
        app:layout_constraintTop_toBottomOf="@+id/ansFarfocal" />

    <TextView
        android:id="@+id/ansHyperfocal"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/Hyperfocal"
        app:layout_constraintTop_toBottomOf="@+id/ansDepth" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="196dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deatils"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/photo_detils_with"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/type"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/deatils"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="183dp"
        android:layout_height="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/circle_of_confusion_m"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deatils" />

    <EditText
        android:id="@+id/circle"
        android:layout_width="188dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:hint="@string/ex_0_3_for_0_3m"
        android:inputType="textPersonName"
        android:text="@string/_0_029"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/type"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="181dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/distance_of_subject_m"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/distancesub"
        android:layout_width="182dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:hint="@string/ex_1_5_for_1_5m"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/circle"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="187dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/selected_aperture"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/selaperture"
        android:layout_width="186dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:hint="@string/ex_2_8_for_2_8"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/distancesub"
        android:autofillHints="" />

    <Button
        android:id="@+id/claculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selaperture" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:text="Edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Delete"
        app:layout_constraintEnd_toStartOf="@+id/claculate"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toEndOf="@+id/edit"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>